fix: prevents Gallery imgs from overflowing

--- a/src/components/Gallery.module.css
+++ b/src/components/Gallery.module.css
@@ -6,10 +6,9 @@
 }
 
 .gallery img {
-  margin: 1rem 2rem;
-  width: auto;
-  min-width: 18rem;
-  max-width: 40%;
+  margin: 1rem 0;
+  width: 100%;
+  min-width: 13rem;
   height: auto;
   transition: filter ease-out 300ms;
 }
@@ -21,5 +20,14 @@
 
   .gallery img {
     margin: 2rem 2;
+    width: auto;
+    max-width: 40%;
+    margin: 1rem 1rem;
+  }
+}
+
+@media (min-width: 700px) {
+  .gallery img {
+    margin: 2rem 2rem;
   }
 }
